@@ -207,6 +207,12 @@ silverlightGraphicDriverCheck  = @@GRAPHIC_DRIVER_CHECK@@
 # experimental-userModeTimer = true
 
 #
+# In order to make it possible to let a window stay opened in fullscreen, even
+# if the user clicks somewhere else it is necessary to install a window class
+# hook. With some plugins this could lead to other problems! [default: false]
+experimental-windowClassHook = true
+
+#
 # A sandbox is a method to isolate an untrusted program from the rest of
 # the system to prevent damage in case of a virus, program errors or
 # similar issues. We've been developing the ability to use a (self-created)
