@@ -183,7 +183,8 @@ bool installTimerHook(){
 enum MenuAction{
 	MENU_ACTION_NONE,
 	MENU_ACTION_ABOUT_PIPELIGHT,
-	MENU_ACTION_TOGGLE_EMBED
+	MENU_ACTION_TOGGLE_EMBED,
+	MENU_ACTION_TOGGLE_STAY_IN_FULLSCREEN
 };
 
 struct MenuEntry{
@@ -234,6 +235,16 @@ std::vector<MenuEntry> menuAddEntries(HMENU hMenu, HWND hwnd){
 	entries.emplace_back(entryInfo.wID, MENU_ACTION_TOGGLE_EMBED);
 	count++; entryInfo.wID++;
 
+	// ------- Stay in fullscreen ------- //
+	if (windowClassHook){
+		entryInfo.fMask			= MIIM_FTYPE | MIIM_STRING | MIIM_ID | MIIM_STATE;
+		entryInfo.fType			= MFT_STRING;
+		entryInfo.fState        = stayInFullscreen ? MFS_CHECKED : 0;
+		entryInfo.dwTypeData 	= (char*)"Stay in fullscreen";
+		InsertMenuItemA(hMenu, count, true, &entryInfo);
+		entries.emplace_back(entryInfo.wID, MENU_ACTION_TOGGLE_STAY_IN_FULLSCREEN);
+		count++; entryInfo.wID++;
+	}
 
 	return entries;
 
@@ -258,6 +269,10 @@ bool menuHandler(NPP instance, UINT identifier, const std::vector<MenuEntry> &en
 				NPN_PushPopupsEnabledState(instance, PR_TRUE);
 				NPN_GetURL(instance, "https://launchpad.net/pipelight", "_blank");
 				NPN_PopPopupsEnabledState(instance);
+				break;
+
+			case MENU_ACTION_TOGGLE_STAY_IN_FULLSCREEN:
+				stayInFullscreen = !stayInFullscreen;
 				break;
 
 			default:
@@ -368,6 +383,163 @@ bool installPopupHook(){
 		originalTrackPopupMenu   	= (TrackPopupMenuPtr)	patchDLLExport(user32, "TrackPopupMenu", (void*)&myTrackPopupMenu);
 
 	return (originalTrackPopupMenuEx && originalTrackPopupMenu);
+}
+
+/* -------- RegisterClass(Ex) hooks --------*/
+
+static const char original_wnd_proc[] = "__pipelight_original_wnd_proc";
+
+LRESULT CALLBACK wndHookProcedureA(HWND hWnd, UINT Msg, WPARAM wParam, LPARAM lParam){
+	WNDPROC prevWndProc = (WNDPROC)GetPropA(hWnd, original_wnd_proc);
+	if (!prevWndProc) return 0;
+
+	if (stayInFullscreen && Msg == WM_KILLFOCUS)
+		return 0;
+
+	return CallWindowProcA(prevWndProc, hWnd, Msg, wParam, lParam);
+}
+
+LRESULT CALLBACK wndHookProcedureW(HWND hWnd, UINT Msg, WPARAM wParam, LPARAM lParam){
+	WNDPROC prevWndProc = (WNDPROC)GetPropA(hWnd, original_wnd_proc);
+	if (!prevWndProc) return 0;
+
+	if (stayInFullscreen && Msg == WM_KILLFOCUS)
+		return 0;
+
+	return CallWindowProcW(prevWndProc, hWnd, Msg, wParam, lParam);
+}
+
+bool hookFullscreenClass(HWND hWnd, std::string classname, bool unicode){
+
+	if (classname != "AGFullScreenWinClass" && classname != "ShockwaveFlashFullScreen")
+		return false;
+
+	DBG_INFO("hooking hWnd %p with classname '%s'", hWnd, classname.c_str());
+	WNDPROC prevWndProc = (WNDPROC)SetWindowLongPtr(hWnd, GWLP_WNDPROC, (LONG_PTR)(unicode ? &wndHookProcedureW : &wndHookProcedureA));
+	SetPropA(hWnd, original_wnd_proc, (HANDLE)prevWndProc);
+	return true;
+}
+
+typedef HWND (* WINAPI CreateWindowExAPtr)(DWORD dwExStyle, LPCTSTR lpClassName, LPCTSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam);
+typedef HWND (* WINAPI CreateWindowExWPtr)(DWORD dwExStyle, LPCWSTR lpClassName, LPCWSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam);
+typedef HWND (* WINAPI CreateWindowAPtr)(LPCTSTR lpClassName, LPCTSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam);
+typedef HWND (* WINAPI CreateWindowWPtr)(LPCWSTR lpClassName, LPCWSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam);
+
+CreateWindowExAPtr originalCreateWindowExA = NULL;
+CreateWindowExWPtr originalCreateWindowExW = NULL;
+CreateWindowAPtr   originalCreateWindowA = NULL;
+CreateWindowWPtr   originalCreateWindowW = NULL;
+
+HWND WINAPI myCreateWindowExA(DWORD dwExStyle, LPCTSTR lpClassName, LPCTSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam){
+	HWND hWnd = originalCreateWindowExA(dwExStyle, lpClassName, lpWindowName, dwStyle, x, y, nWidth, nHeight, hWndParent, hMenu, hInstance, lpParam);
+	
+	if (!IS_INTRESOURCE(lpClassName)){
+		std::string classname(lpClassName);
+		hookFullscreenClass(hWnd, classname, false);
+	}
+
+	return hWnd;
+}
+
+HWND WINAPI myCreateWindowExW(DWORD dwExStyle, LPCWSTR lpClassName, LPCWSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam){
+	HWND hWnd = originalCreateWindowExW(dwExStyle, lpClassName, lpWindowName, dwStyle, x, y, nWidth, nHeight, hWndParent, hMenu, hInstance, lpParam);
+
+	if (!IS_INTRESOURCE(lpClassName)){
+		char name[256];
+		WideCharToMultiByte(CP_ACP, 0, lpClassName, -1, name, sizeof(name), NULL, NULL);
+		std::string classname(name);
+		hookFullscreenClass(hWnd, classname, false);
+	}
+
+	return hWnd;
+}
+
+HWND WINAPI myCreateWindowA(LPCTSTR lpClassName, LPCTSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam){
+	HWND hWnd = originalCreateWindowA(lpClassName, lpWindowName, dwStyle, x, y, nWidth, nHeight, hWndParent, hMenu, hInstance, lpParam);	
+
+	if (!IS_INTRESOURCE(lpClassName)){
+		std::string classname(lpClassName);
+		hookFullscreenClass(hWnd, classname, false);
+	}
+
+	return hWnd;
+}
+
+HWND WINAPI myCreateWindowW(LPCWSTR lpClassName, LPCWSTR lpWindowName, DWORD dwStyle, int x, int y, int nWidth, int nHeight, HWND hWndParent, HMENU hMenu, HINSTANCE hInstance, LPVOID lpParam){
+	HWND hWnd = originalCreateWindowW(lpClassName, lpWindowName, dwStyle, x, y, nWidth, nHeight, hWndParent, hMenu, hInstance, lpParam);	
+
+	if (!IS_INTRESOURCE(lpClassName)){
+		char name[256];
+		WideCharToMultiByte(CP_ACP, 0, lpClassName, -1, name, sizeof(name), NULL, NULL);
+		std::string classname(name);
+		hookFullscreenClass(hWnd, classname, false);
+	}
+
+	return hWnd;
+}
+
+
+/*typedef ATOM (* WINAPI RegisterClassExAPtr)(WNDCLASSEXA *lpWndCls);
+typedef ATOM (* WINAPI RegisterClassExWPtr)(WNDCLASSEXW *lpWndCls);
+typedef ATOM (* WINAPI RegisterClassAPtr)(WNDCLASSA *lpWndCls);
+typedef ATOM (* WINAPI RegisterClassWPtr)(WNDCLASSW *lpWndCls);
+
+RegisterClassExAPtr originalRegisterClassExA = NULL;
+RegisterClassExWPtr originalRegisterClassExW = NULL;
+RegisterClassAPtr   originalRegisterClassA = NULL;
+RegisterClassWPtr   originalRegisterClassW = NULL;
+
+ATOM WINAPI myRegisterClassExA(WNDCLASSEXA *lpWndCls){
+	return originalRegisterClassExA(lpWndCls);
+}
+
+ATOM WINAPI myRegisterClassExW(WNDCLASSEXW *lpWndCls){
+	return originalRegisterClassExW(lpWndCls);
+}
+
+ATOM WINAPI myRegisterClassA(WNDCLASSA *lpWndCls){
+	return originalRegisterClassA(lpWndCls);
+}
+
+ATOM WINAPI myRegisterClassW(WNDCLASSW *lpWndCls){
+	return originalRegisterClassW(lpWndCls);
+}
+*/
+
+
+bool installWindowClassHook(){
+	HMODULE user32 = LoadLibrary("user32.dll");
+
+	if(!user32)
+		return false;
+
+	if (!originalCreateWindowExA)
+		originalCreateWindowExA     = (CreateWindowExAPtr)patchDLLExport(user32, "CreateWindowExA", (void*)&myCreateWindowExA);
+
+	if (!originalCreateWindowExW)
+		originalCreateWindowExW     = (CreateWindowExWPtr)patchDLLExport(user32, "CreateWindowExW", (void*)&myCreateWindowExW);
+
+	if (!originalCreateWindowA)
+		originalCreateWindowA       = (CreateWindowAPtr)patchDLLExport(user32, "CreateWindowA", (void*)&myCreateWindowA);
+
+	if (!originalCreateWindowW)
+		originalCreateWindowW       = (CreateWindowWPtr)patchDLLExport(user32, "CreateWindowW", (void*)&myCreateWindowW);
+
+	/*
+	if(!originalRegisterClassExA)
+		originalRegisterClassExA    = (RegisterClassExAPtr)patchDLLExport(user32,   "RegisterClassExA", (void*)&myRegisterClassExA);
+
+	if(!originalRegisterClassExW)
+		originalRegisterClassExW    = (RegisterClassExWPtr)patchDLLExport(user32,   "RegisterClassExW", (void*)&myRegisterClassExW);
+
+	if(!originalRegisterClassA)
+		originalRegisterClassA    	= (RegisterClassAPtr)patchDLLExport(user32,   "RegisterClassA", (void*)&myRegisterClassA);
+
+	if(!originalRegisterClassW)
+		originalRegisterClassW    	= (RegisterClassWPtr)patchDLLExport(user32,   "RegisterClassW", (void*)&myRegisterClassW);
+	*/
+
+	return (originalCreateWindowExA && originalCreateWindowExW && originalCreateWindowA && originalCreateWindowW);
 }
 
 /* -------- Unity hooks --------*/
