@@ -4,6 +4,7 @@
 extern bool installTimerHook();
 extern bool handleTimerEvents();
 extern bool installPopupHook();
+extern bool installWindowClassHook();
 extern bool installUnityHooks();
 
 #endif // ApiHook_h_
